syntax = "proto3";

package users;

option go_package = "/users";

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool married = 6;
}

service UserService {
  rpc GetUserById (UserRequest) returns (User);
  rpc GetUsersByIds (UserIdsRequest) returns (stream User);
}

message UserRequest {
  int32 id = 1;
}

message UserIdsRequest {
  repeated int32 ids = 1;
}
